# IntelliSearch

./: .gitignore  README.md  config.json
.trae/rules/: project_rules.md
DOCS/: CodeStandard.md  spdlogGuide.md
DOCS/毕业设计/: wenti.md  ~$引言.docx  ~$模版.docx  任务书.docx  外文翻译.docx  开题报告.docx  引言.docx  毕业论文.md  第三章  系统总体设计.docx  第二章 系统相关技术.docx  系统总体设计.md  系统测试与评价.md  系统详细实现.md
client/: CMakeLists.txt  ProjectDoc.md  clientDoc.md
client/qml/: main.qml  resources.qrc
client/qml/components/: BorderButton.qml  ChatTextField.qml  HistoryRecord.qml  HoverBackground.qml  LinkInputDialog.qml  LinkTag.qml  ModelListView.qml  ReplyChatBox.qml  SearchListView.qml  SearchTextField.qml  SendChatBox.qml  SideBar.qml
client/qml/pages/: ChatPage.qml  SettingPage.qml  StartPage.qml
client/qml/utils/: MarkdownConverter.js
client/src/: SearchBridge.cpp  SearchBridge.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
client/src/resources/: resources.qrc
client/src/resources/qml/: ChatPage.qml  SearchBar.qml  SearchResults.qml  SettingsPage.qml  main.qml
config/: ConfigManager.cpp  ConfigManager.h  IntentParserPrompt.json  SearchParserPrompt.json  config.json  intent_rules.json
core/api/: AIServiceManager.cpp  AIServiceManager.h  APIService.h  APIServiceManager.cpp  APIServiceManager.h  BaseAPIService.cpp  BaseAPIService.h  KimiAPIService.cpp  KimiAPIService.h  SearchServiceManager.cpp  SearchServiceManager.h
core/api/AIService/: AIService.cpp  AIService.h  DeepSeek.cpp  DeepSeek.h  Hunyuan.cpp  Hunyuan.h  Kimi.cpp  Kimi.h  Qwen.cpp  Qwen.h
core/api/SearchService/: Bocha.cpp  Bocha.h  Exa.cpp  Exa.h  Google.cpp  Google.h  SearchService.cpp  SearchService.h
core/engine/: IntentParser.cpp  IntentParser.h  SearchEngine.cpp  SearchEngine.h
core/search_engine/: CMakeLists.txt
core/search_engine/src/: main.cpp
core/src/: IntentParser.cpp  IntentParser.h
data/crawler/: CrawlResult.h  Crawler.cpp  Crawler.h  CrawlerManager.cpp  CrawlerManager.h  HtmlParser.cpp  HtmlParser.h  JSExecutionAnalyzer.cpp  JSExecutionAnalyzer.h  PythonCrawlerBridge.cpp  PythonCrawlerBridge.h  WebEnginePage.cpp  WebEnginePage.h
data/crawler/python_crawler/: README.md  config_example.json  crawler.py  dynamic_config_example.json  dynamic_crawler.py
data/database/: DatabaseManager.cpp  DatabaseManager.h
log/: Logger.cpp  Logger.h
